--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,34 +1,21 @@
-#[program:wechatspider.0fenbei.com]
-#command=/usr/bin/python /var/www/0fenbei/wechat-spider/manage.py runserver 0.0.0.0:8090
-#umask=022
-#user=ripple
-#startsecs=0
-#stopwaitsecs=0
-#autostart=true
-#autorestart=true
-#stdout_logfile=/var/log/wechatspider/wechatspider.stdout.log
-#stderr_logfile=/var/log/wechatspider/wechatspider.stderr.log
-#stopsignal=KILL
-#killasgroup=true
-
-[program:uwsgi-wechatspider.0fenbei.com]
-command=/usr/bin/uwsgi --ini /var/www/0fenbei/wechat-spider/uwsgi.ini
-directory=/var/www/0fenbei/wechat-spider
+[program:wechatspider]
+command=/usr/bin/python /Users/apple/project/wechat-spider/manage.py runserver 0.0.0.0:8001
 umask=022
-user=ripple
+user=apple
 startsecs=0
 stopwaitsecs=0
 autostart=true
 autorestart=true
-stdout_logfile=/var/log/bowenpay/wechatspider.stdout.log
-stderr_logfile=/var/log/bowenpay/wechatspider.stderr.log
-stopsignal=QUIT
+stdout_logfile=/var/log/wechatspider/wechatspider.stdout.log
+stderr_logfile=/var/log/wechatspider/wechatspider.stderr.log
+stopsignal=KILL
 killasgroup=true
+
 
 [program:wechatspider_scheduler]
 command=/usr/bin/python /var/www/0fenbei/wechat-spider/bin/scheduler.py
 umask=022
-user=ripple
+user=apple
 startsecs=0
 stopwaitsecs=0
 autostart=true
@@ -41,7 +28,7 @@ killasgroup=true
 [program:wechatspider_downloader]
 command=/usr/bin/python /var/www/0fenbei/wechat-spider/bin/downloader.py
 umask=022
-user=root
+user=apple
 startsecs=0
 stopwaitsecs=0
 autostart=true
@@ -56,7 +43,7 @@ numprocs=2
 [program:wechatspider_extractor]
 command=/usr/bin/python /var/www/0fenbei/wechat-spider/bin/extractor.py
 umask=022
-user=ripple
+user=apple
 startsecs=0
 stopwaitsecs=0
 autostart=true
@@ -71,7 +58,7 @@ numprocs=2
 [program:wechatspider_processor]
 command=/usr/bin/python /var/www/0fenbei/wechat-spider/bin/processor.py
 umask=022
-user=ripple
+user=apple
 startsecs=0
 stopwaitsecs=0
 autostart=true
