--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,12 +1,15 @@
 [uwsgi]
-chdir=/var/www/0fenbei/wechat-spider
+chdir=/home/provisional/wechat-spider/wechatspider
 py-autoreload=3  #实现和django自带server一样更新文件自动重启功能
 module=wechatspider.wsgi:application
 master=True
 pidfile=/tmp/wechatspider.pid
 vacuum=True   # clear environment on exit
 socket=127.0.0.1:49161
-processes=1    # 启动1个进程
+processes=3    # 启动1个进程
 harakiri=20 # respawn processes taking more than 20 seconds
 max-requests=5000  # 请求5000次后重启
-# daemonize=/var/log/bowenpay/weibo-spider-uwsgi.log # 不使用daemon模式，防止supervisor自动重启
+daemonize=/home/provisional/wechat-spider/weibo-spider-uwsgi.log
+buffer-size=65535
+plugins=python
+wsgi-file=/home/provisional/wechat-spider/wechatspider/wsgi.py
