适配当前需求

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,17 +1,17 @@
-upstream wechatspider_0fenbei_uwsgi_backend {
+upstream suibian.srleyang.com {
     server 127.0.0.1:49161;
 }
 
 server {
     listen   80;
-    server_name wechatspider.0fenbei.com;
+    server_name suibian.srleyang.com;
 
     location ^~ /.git {
         deny all;
     }
 
     location ^~ /static {
-        root   /var/www/0fenbei/wechat-spider;
+        root   /home/provisional/wechat-spider;
         index  index.html;
         expires 1M;
         access_log off;
@@ -28,7 +28,7 @@ server {
         proxy_set_header X-Rewrite-URL $request_uri;
         client_max_body_size 10m;
 
-        uwsgi_pass  wechatspider_0fenbei_uwsgi_backend;
+        uwsgi_pass 127.0.0.1:49161;
         include uwsgi_params;
     }
 
