--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,15 +1,16 @@
 [uwsgi]
-chdir=/home/provisional/wechat-spider/wechatspider
+chdir=/home/provisional/wechat-spider
 py-autoreload=3  #实现和django自带server一样更新文件自动重启功能
 module=wechatspider.wsgi:application
 master=True
 pidfile=/tmp/wechatspider.pid
 vacuum=True   # clear environment on exit
 socket=127.0.0.1:49161
-processes=3    # 启动1个进程
+processes=1    # 启动1个进程
 harakiri=20 # respawn processes taking more than 20 seconds
 max-requests=5000  # 请求5000次后重启
 daemonize=/home/provisional/wechat-spider/weibo-spider-uwsgi.log
 buffer-size=65535
-plugins=python
-wsgi-file=/home/provisional/wechat-spider/wechatspider/wsgi.py
+plugins=python,http
+#wsgi-file=/home/provisional/wechat-spider/wechatspider/wsgi.py
+pythonpath=/home/provisional/.pyenv/versions/2.7.13/lib/python2.7/site-packages
