--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,70 +1,80 @@
 [program:wechatspider]
-command=/usr/bin/python /Users/apple/project/wechat-spider/manage.py runserver 0.0.0.0:8001
+directory=/Users/apple/project/wechat-spider
+command=python manage.py runserver 0.0.0.0:8001
 umask=022
 user=apple
-startsecs=0
+startsecs=5
 stopwaitsecs=0
-autostart=true
+autostart=false
 autorestart=true
-stdout_logfile=/var/log/wechatspider/wechatspider.stdout.log
-stderr_logfile=/var/log/wechatspider/wechatspider.stderr.log
+redirect_stderr = true
+stdout_logfile=/Users/apple/project/wechat-spider/wechatspider.log
+stderr_logfile=/Users/apple/project/wechat-spider/wechatspider.log
 stopsignal=KILL
 killasgroup=true
 
 
 [program:wechatspider_scheduler]
-command=/usr/bin/python /var/www/0fenbei/wechat-spider/bin/scheduler.py
+directory=/Users/apple/project/wechat-spider
+command=python /Users/apple/project/wechat-spider/bin/scheduler.py
 umask=022
 user=apple
-startsecs=0
+startsecs=5
 stopwaitsecs=0
-autostart=true
+autostart=false
 autorestart=true
-stdout_logfile=/var/log/wechatspider/wechatspider_scheduler.stdout.log
-stderr_logfile=/var/log/wechatspider/wechatspider_scheduler.stderr.log
+redirect_stderr = true
+stdout_logfile=/Users/apple/project/wechat-spider/scheduler.stdout.log
+stderr_logfile=/Users/apple/project/wechat-spider/scheduler.stderr.log
 stopsignal=KILL
 killasgroup=true
 
 [program:wechatspider_downloader]
-command=/usr/bin/python /var/www/0fenbei/wechat-spider/bin/downloader.py
+directory=/Users/apple/project/wechat-spider
+command=python /Users/apple/project/wechat-spider/bin/downloader.py
 umask=022
 user=apple
-startsecs=0
+startsecs=5
 stopwaitsecs=0
-autostart=true
+autostart=false
 autorestart=true
-stdout_logfile=/var/log/wechatspider/wechatspider_downloader.stdout.log
-stderr_logfile=/var/log/wechatspider/wechatspider_downloader.stderr.log
+redirect_stderr = true
+stdout_logfile=/Users/apple/project/wechat-spider/downloader.stdout.log
+stderr_logfile=/Users/apple/project/wechat-spider/downloader.stderr.log
 stopsignal=KILL
 killasgroup=true
 process_name=%(process_num)s
 numprocs=2
 
 [program:wechatspider_extractor]
-command=/usr/bin/python /var/www/0fenbei/wechat-spider/bin/extractor.py
+directory=/Users/apple/project/wechat-spider
+command=python /Users/apple/project/wechat-spider/bin/extractor.py
 umask=022
 user=apple
-startsecs=0
+startsecs=5
 stopwaitsecs=0
-autostart=true
+autostart=false
 autorestart=true
-stdout_logfile=/var/log/wechatspider/wechatspider_extractor.stdout.log
-stderr_logfile=/var/log/wechatspider/wechatspider_extractor.stderr.log
+redirect_stderr = true
+stdout_logfile=/Users/apple/project/wechat-spider/extractor.stdout.log
+stderr_logfile=/Users/apple/project/wechat-spider/extractor.stderr.log
 stopsignal=KILL
 killasgroup=true
 process_name=%(process_num)s
 numprocs=2
 
 [program:wechatspider_processor]
-command=/usr/bin/python /var/www/0fenbei/wechat-spider/bin/processor.py
+directory=/Users/apple/project/wechat-spider
+command=python /Users/apple/project/wechat-spider/bin/processor.py
 umask=022
 user=apple
-startsecs=0
+startsecs=5
 stopwaitsecs=0
-autostart=true
+autostart=false
 autorestart=true
-stdout_logfile=/var/log/wechatspider/wechatspider_processor.stdout.log
-stderr_logfile=/var/log/wechatspider/wechatspider_processor.stderr.log
+redirect_stderr = true
+stdout_logfile=/Users/apple/project/wechat-spider/processor.stdout.log
+stderr_logfile=/Users/apple/project/wechat-spider/processor.stderr.log
 stopsignal=KILL
 killasgroup=true
 
